- pts-core: Add Apple OS X font paths for use by the GD graph renderer
- pts-core: Add "/usr/lib64/" to the automated external dependency verification path
- phodevi: Don't return "n/a" from LSB release strings
- phodevi: IceWM window manager detection
- phodevi: Add gpu.temp safety check to prevent against AMD Catalyst OverDrive sending garbage

Phoronix Test Suite 4.8 Milestone 1
20 June 2013

- pts-core: Don't show null error strings on failed test installations
- pts-core: Allow test profiles to pass min/max data results through JSON to graphs using MIN_ and MAX_ prefixes
- pts-core: Support displaying min/max data from the concise (default) display mode text output
- phodevi: MHz -> GHz fix for the cpu.freq sensor on Apple OS X
- phodevi: Add fallback support for using ioreg for calculating sys.power power draw on Apple OS X
- phodevi: Support reporting multiple monitor models from Xorg.0.log

Phoronix Test Suite 4.6.1-Utsira
6 June 2013

- pts-core: Add ONLY_TEST_TYPES environment variable for skipping test profiles that don't belong to a certain hardware type
- pts-core: Ensure extract-from-result-file opens the proper HTML web-browser
- pts-core: Ensure copy-run-in-result-file opens the proper HTML web-browser
- pts-core: Ensure reorder-result-file opens the proper HTML web-browser
- pts-core: Ensure rename-identifier-in-result-file opens the proper HTML web-browser
- pts-core: Ensure remove-from-result-file opens the proper HTML web-browser
- pts-core: Reworked handling of browser launching in batch mode
- pts-core: Launch the web browser to display results when using internal-run mode
- phodevi: Add Haswell BMI2 detection
- phodevi: Support vm_stat with the memory.usage sensor, works on OS X
- phodevi: Add new network.usage sensor for Apple OS X contributed by ESET

Phoronix Test Suite 4.6.0-Utsira
21 May 2013

- phodevi: Report CPU scaling driver along side the CPU scaling governor

Phoronix Test Suite 4.6 Milestone 2
16 May 2013
